--- a/public/index.html
+++ b/public/index.html
@@ -1,89 +1,99 @@
 <!DOCTYPE html>
 <html lang="de">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Web site created using create-react-app"/>
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>React App</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-    <style>
-      body .cookiesjsr {
-        --ci-blue: #004c93;
-        --ci-dark: #000f37;
-        --ci-light: #FFF;
-        --ci-bg-light: #e4e5e6;
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app"/>
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+  <title>React App</title>
+  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+</head>
+<body>
+  <noscript>
+    <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+  </noscript>
 
-        --default-margin: 1.25rem;
+  <div class="container">
+    <h1 class="display-4">React JS COOKiES</h1>
 
-        --btn-font-color: #FFF;
-        --btn-border-color: #FFF;
-        --btn-bg-color: #004c93;
-
-        --banner-logo-offset: 100px;
-        --banner-bg-color: #004c93;
-        --banner-font-color: #FFF;
-        --banner-link-font-color: #FFF;
-        --banner-btn-font-color: #FFF;
-        --banner-btn-border-color: #FFF;
-        --banner-btn-bg-color: #004c93;
-
-        --layer-bg-light: #FFF;
-        --layer-bg-dark: #004c93;
-        --layer-font-light: #FFF;
-        --layer-font-dark: #000f37;
-        --layer-border-color: #e4e5e6;
-        --layer-title-color: #000f37;
-        --layer-header-height: 3.5rem;
-        --layer-footer-height: 4.5rem;
-
-        --switch-border-color: #e4e5e6;
-        --switch-handle-color: #FFF;
-        --switch-bg-off: #FFF;
-        --switch-bg-on: #00AA00;
-        --switch-width: 45px;
-        --switch-height: 20px;
-      }
-      a:focus {
-        box-shadow: 0 0 0 3px red;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container">
-      <a href="#editCookieSettings">Open cookie settings by Hash</a>
-
-      <h3>En-/disable All</h3>
-      <div class="row">
-        <div class="col-md-6 all plugin" id="all">
-          <a href="#enableAll" id="enableAll">Enable all</a><br />
-          <a href="#disableAll" id="disableAll">Disable all</a>
-        </div>
-      </div>
-
-      <h3>En-/Disable Groups</h3>
-      <div class="row">
-        <div class="col-md-6 analytic plugin" id="analytic">
-          <a href="#enableSocial" id="enableSocial">Enable group Social</a><br />
-          <a href="#disableSocial" id="disableSocial">Disable group Social</a>
-        </div>
-      </div>
-
-      <h3>Plugins</h3>
-      <div class="row">
-        <div class="col-md-6 analytics plugin" id="analytics"></div>
-        <div class="col-md-6 instagram plugin" id="instagram"></div>
-        <div class="col-md-6 twitter plugin" id="twitter"></div>
-        <div class="col-md-6 video plugin" id="video"></div>
-      </div>
-
+    <div class="my-5">
+      <a href="#editCookieSettings" class="btn btn-primary">Open cookie settings by Hash</a>
     </div>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <script type="application/javascript" src="%PUBLIC_URL%/js/gdpr-listener.js"></script>
-    <!--script type="application/javascript" src="%PUBLIC_URL%/js/cookiesjsr-preloader.min.js"></script -->
-    <div id="cookiesjsr"></div>
-  </body>
+
+    <div class="my-5">
+      <h2 class="display-5">Controlls</h2>
+      <p class="lead">Users can edit the COOKiES consent settings from outside the UI. This is useful when a
+        content element is not displayed because consent has not given yet.</p>
+      <div class="btn-group btn-group-lg">
+        <button type="button" class="btn btn-outline-primary" disabled>ALL</button>
+        <button type="button" class="btn btn-info" id="enableAll">ON</button>
+        <button type="button" class="btn btn-warning" id="disableAll">OFF</button>
+      </div>
+    </div>
+
+    <div class="my-5">
+      <p class="lead">Groups</p>
+      <div class="btn-group">
+        <button type="button" class="btn btn-outline-primary" disabled>Group Tracking</button>
+        <button type="button" class="btn btn-info" id="enableAnalytic">ON</button>
+        <button type="button" class="btn btn-warning" id="disableAnalytic">OFF</button>
+      </div>
+    </div>
+
+    <div class="my-5">
+      <p class="lead">Single services</p>
+      <div class="row">
+        <div class="col-lg-3 col-sm-6">
+          <div class="btn-group btn-group-sm">
+            <button type="button" class="btn btn-outline-primary" disabled>Analytics</button>
+            <button type="button" class="btn btn-info" id="enableAnalytics">ON</button>
+            <button type="button" class="btn btn-warning" id="disableAnalytics">OFF</button>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <div class="btn-group btn-group-sm">
+            <button type="button" class="btn btn-outline-primary" disabled>GoogleTag</button>
+            <button type="button" class="btn btn-info" id="enableGtag">ON</button>
+            <button type="button" class="btn btn-warning" id="disableGtag">OFF</button>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <div class="btn-group btn-group-sm">
+            <button type="button" class="btn btn-outline-primary" disabled>Facebook</button>
+            <button type="button" class="btn btn-info" id="enableFacebook">ON</button>
+            <button type="button" class="btn btn-warning" id="disableFacebook">OFF</button>
+          </div>
+        </div>
+        <div class="col-lg-3 col-sm-6">
+          <div class="btn-group btn-group-sm">
+            <button type="button" class="btn btn-outline-primary" disabled>Youtube</button>
+            <button type="button" class="btn btn-info" id="enableYoutube">ON</button>
+            <button type="button" class="btn btn-warning" id="disableYoutube">OFF</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="display-5">Services Status</h2>
+    <p class="lead">
+      This panel represents the current state of your 3-rd party services.
+    </p>
+    <div class="row">
+      <div class="col-md-6 analytics plugin" id="analytics"></div>
+      <div class="col-md-6 gtag plugin" id="gtag"></div>
+      <div class="col-md-6 facebook plugin" id="facebook"></div>
+      <div class="col-md-6 youtube plugin" id="youtube"></div>
+    </div>
+
+  </div>
+  <script type="application/javascript" src="%PUBLIC_URL%/js/gdpr-listener.js"></script>
+  <!--script type="application/javascript" src="%PUBLIC_URL%/js/cookiesjsr-preloader.min.js"></script -->
+  <div id="cookiesjsr"></div>
+  <!-- built files will be auto injected -->
+  <script type="application/json" data-drupal-selector="drupal-settings-json">{"cookiesjsr":{"config":{"cookie":{"name":"cookiesjsr","expires":31536000000,"domain":"","sameSite":"Lax","secure":false},"library":{"libBasePath":"https://cdn.jsdelivr.net/gh/jfeltkamp/cookiesjsr@1/dist","libPath":"https://cdn.jsdelivr.net/gh/jfeltkamp/cookiesjsr@1/dist/cookiesjsr.min.js","scrollLimit":0},"callback":{"method":"get","url":"/cookies/consent/callback.json","headers":[]},"interface":{"openSettingsHash":"#editCookieSettings","showDenyAll":true,"denyAllOnLayerClose":false,"settingsAsLink":false,"availableLangs":["en"],"defaultLang":"en","groupConsent":true,"cookieDocs":true}},"services":{"default":{"id":"default","services":[{"key":"base","type":"default","name":"Required cookies","info":{"value":"<table>\r\n\t<thead>\r\n\t\t<tr>\r\n\t\t\t<th width=\"15%\">Cookie name</th>\r\n\t\t\t<th width=\"15%\">Default expiration time</th>\r\n\t\t\t<th>Description</th>\r\n\t\t</tr>\r\n\t</thead>\r\n\t<tbody>\r\n\t\t<tr>\r\n\t\t\t<td><code dir=\"ltr\" translate=\"no\">SSESS&lt;ID&gt;</code></td>\r\n\t\t\t<td>1 month</td>\r\n\t\t\t<td>If you are logged in to this website, a session cookie is required to identify and connect your browser to your user account in the server backend of this website.</td>\r\n\t\t</tr>\r\n\t\t<tr>\r\n\t\t\t<td><code dir=\"ltr\" translate=\"no\">cookiesjsr</code></td>\r\n\t\t\t<td>1 year</td>\r\n\t\t\t<td>When you visited this website for the first time, you were asked for your permission to use several services (including those from third parties) that require data to be saved in your browser (cookies, local storage). Your decisions about each service (allow, deny) are stored in this cookie and are reused each time you visit this website.</td>\r\n\t\t</tr>\r\n\t</tbody>\r\n</table>\r\n","format":"full_html"},"uri":"","needConsent":false}],"weight":1},"tracking":{"id":"tracking","services":[{"key":"analytics","type":"tracking","name":"Google Analytics","info":{"format":"full_html","value":""},"uri":"https://support.google.com/analytics/answer/6004245","needConsent":true},{"key":"gtag","type":"tracking","name":"Google Tag Manager","info":{"format":"full_html","value":""},"uri":"https://www.gtag.com/digital/datenschutz-0","needConsent":true}],"weight":10},"social":{"id":"social","services":[{"key":"facebook","type":"social","name":"Facebook","info":{"format":"full_html","value":""},"uri":"https://help.facebook.com/196883487377501","needConsent":true}],"weight":20},"video":{"id":"video","services":[{"key":"youtube","type":"video","name":"Video provided by YouTube","info":{"format":"full_html","value":""},"uri":"https://policies.google.com/privacy","needConsent":true}],"weight":40}},"translation":{"_core":{"default_config_hash":"r0JMDv27tTPrhzD4ypdLS0Jijl0-ccTUdlBkqvbAa8A"},"langcode":"en","default_langcode":"en","bannerText":"We use a selection of our own and third-party cookies on the pages of this website: Essential cookies, which are required in order to use the website; functional cookies, which provide better easy of use when using the website; performance cookies, which we use to generate aggregated data on website use and statistics; and marketing cookies, which are used to display relevant content and advertising. If you choose \"ACCEPT ALL\", you consent to the use of all cookies. You can accept and reject individual cookie types and  revoke your consent for the future at any time under \"Settings\".","privacyPolicy":"Privacy policy","privacyUri":"","imprint":"Imprint","imprintUri":"","cookieDocs":"Cookie documentation","cookieDocsUri":"/cookies/documentation","denyAll":"Deny all","settings":"Cookie settings","acceptAll":"Accept all","allowAll":"Accept all","cookieSettings":"Cookie settings","close":"Close","officialWebsite":"View official website","requiredCookies":"Required cookies","readMore":"Read more","allowed":"allowed","denied":"denied","alwaysActive":"Always active","settingsAllServices":"Settings for all services","saveSettings":"Save","credit":"","default":{"title":"What are Cookies?","details":"Cookies are small text files that are placed by your browser on your device in order to store certain information. Using the information that is stored and returned, a website can recognize that you have previously accessed and visited it using the browser on your end device. We use this information to arrange and display the website optimally in accordance with your preferences. Within this process, only the cookie itself is identified on your device. Personal data is only stored following your express consent or where this is absolutely necessary to enable use the service provided by us and accessed by you."},"tracking":{"title":"Tracking cookies","details":"Marketing cookies come from external advertising companies (\"third-party cookies\") and are used to collect information about the websites visited by the user. The purpose of this is to create and display target group-oriented content and advertising for the user."},"social":{"title":"Social Plugins","details":"Comments managers facilitate the filing of comments and fight against spam."},"video":{"title":"Video","details":"Video sharing services help to add rich media on the site and increase its visibility."}}}}</script>
+
+</body>
 </html>
